# Hackathon-II-Todo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tmpclaude-d0a2-cwd  todo.bat
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  hackathon_todo.db  pyproject.toml  railway.json  test_db_connection.py  tmpclaude-bd04-cwd
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_13_initial_migration.py
backend/src/hackathon_todo_api/: config.py  database.py  main.py
backend/src/hackathon_todo_api/auth/: jwt.py
backend/src/hackathon_todo_api/models/: task.py  user.py
backend/src/hackathon_todo_api/routes/: auth.py  health.py  tasks.py
backend/src/hackathon_todo_api/schemas/: task.py
backend/src/hackathon_todo_api/services/: task_service.py
backend/tests/: test_auth_routes.py  test_task_service.py
frontend/: Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tmpclaude-dbad-cwd  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: EditTaskModal.tsx  TaskCard.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/types/: index.ts
frontend/tests/: basic.test.tsx
history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
history/prompts/general/: 1-fix-cli-command-structure.general.prompt.md  2-add-interactive-shell-mode.general.prompt.md
history/prompts/todo-console-app/: 2-create-todo-console-app-spec.spec.prompt.md  (+3 more)
specs/phase-ii-full-stack-web-app/: plan.md  spec.md  tasks.md
specs/todo-console-app/: plan.md  spec.md  tasks.md
src/hackathon_todo/: __init__.py  __main__.py
src/hackathon_todo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hackathon_todo/cli/: app.py  (+2 more)
tests/cli/: test_commands.py
tests/domain/: test_exceptions.py  test_models.py
tests/services/: test_task_service.py
(+20 files in other folders)
