[project]
name = "hackathon-todo-api"
version = "0.1.0"
description = "Full-stack todo application API"
authors = [{ name = "Developer", email = "dev@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "pyjwt>=2.8.0",
    "better-exceptions>=0.3.0",
    "python-multipart>=0.0.20",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "emails>=0.6",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]